<resources>
    <string name="app_name">My AQua</string>
    <string name="terpercaya_">Terpercaya lebih\ndari 45 tahun</string>

    <string name="kebaikan_al">
Kebaikan Alam\nKebaikan Hidup
</string>

    <string name="login">
Login
</string>

    <string name="email">
Email
</string>

    <string name="password">
Kata Sandi
</string>

    <string name="kebaikan_be">KEBAIKAN\nBERAWAL\nDARI SINI</string>

    <string name="selamat_pag">Selamat Pagi </string>

    <string name="olivia_gabr">
olivia.gabrielle@gmail.com
</string>

    <string name="scan_kode_d">
Scan kode dibalik tutup botol dan tukarkan hadiah menarik
</string>


    <string name="vaganza_fie">
Vaganza Fiesta
</string>

    <string name="hadiah_mena">
Hadiah Menarik
</string>

    <string name="temukan_kod">
Temukan kode\ndibalik tutup botol
</string>

    <string name="some_id">
30
</string>

    <string name="scan_tutup_">
Scan Tutup Botol
</string>

    <string name="total_tutup">
Total Tutup Botol\n<b>Olivia Gabrielle</b> <font color="#1A529D">30</font>
</string>

    <string name="setiap_kali">
Setiap kali Anda berhasil memindai kode yang belum pernah diklaim sebelumnya, Anda akan menerima 1 poin.
</string>

    <string name="scan_ktp_un">
Scan KTP untuk melanjutkan proses klaim tutup botol. Pastikan foto KTP terlihat dengan jelas
</string>

    <string name="redeemvagan">
RedeemVaganza
</string>

    <string name="some1_id">
400
</string>

    <!-- strings.xml -->
    <string name="royalvaganz">
Royalvaganza
</string>

    <string name="diskon_70_h">
Diskon 70% Hotel Traveloka
</string>

    <string name="liburan_mud">
Liburan mudah dengan penginapan harga murah. Memberikan diskon segala jenis hotel / penginapan yang tersedia di aplikasi traveloka dengan tanda \u00e2\u0080\u009cdiskon redeem aqua\u00e2\u0080\u009d. Dapatkan diskon hingga 70 persen. Berlaku untuk pengguna aplikasi traveloka. Kumpulkan poin sebanyak-banyak sesuai syarat dan ketentuan di bawah.
</string>

    <string name="syarat_kete">
Syarat &amp; Ketentuan
</string>

    <string name="jumlah_mini">
        - Jumlah minimal 200 poin\n
        - Sudah memiliki akun di Traveloka\n
        - Bersedia digantikan diskon yang lain jika diskon ini sudah habis\n
        - Penukaran bisa dilakukan kapan saja
</string>

    <string name="jumlah_penu">
Jumlah Penukaran
</string>

    <string name="total_poin">
Total Poin
</string>


</resources>
